// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform import 1`] = `
"import { Foo } from "bar"
import { Button } from "@/registry/new-york/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn } from "@/lib/utils"
"
`;

exports[`transform import 2`] = `
"import { Foo } from "bar"
import { Button } from "@/registry/new-york/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn, foo } from '~/lib'
import { bar } from "@/lib/utils/bar"
"
`;

exports[`transform import 3`] = `
"import { Foo } from "bar"
import { Button } from "@/registry/new-york/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn } from '~/src/utils'
import { bar } from "@/lib/utils/bar"
"
`;

exports[`transform import 4`] = `
"import { Foo } from "bar"
import { Button } from "@/registry/new-york/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn } from '~/src/utils'
import { bar } from "@/lib/utils/bar"
"
`;

exports[`transform import 5`] = `
"import { Foo } from "bar"
import { Button } from "@/registry/new-york/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn } from '~/src/utils'
import { bar } from "@/lib/utils/bar"
"
`;

exports[`transform import 6`] = `
"import { Foo } from "bar"
import { Button } from "@/components/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn } from '@custom-alias/lib/utils'
"
`;

exports[`transform import 7`] = `
"import { Foo } from "bar"
import { Button } from "@/components/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"
import Layout from "@/registry/blocks/layout/Layout.vue"


import { cn } from '@custom-alias/lib/utils'
"
`;

exports[`transform import 8`] = `
"import { Foo } from "bar"
import { Button } from "@/components/ui/button"
import { Label} from "ui/label"
import { Box } from "@/registry/new-york/box"

import { cn } from '~/utils/cn'
"
`;
